--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Jlayer.classpath}:\
-    ${libs.JLibrary.classpath}
+    ${libs.JLibrary.classpath}:\
+    ${libs.Jlayer.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
